# otus_cpp_homework_1

./: CMakeLists.txt  build.sh  clear.sh  configure.sh  configure_with_boost_test.sh  configure_with_gtest.sh  generate-build-info-cpp.cmake  generate-build-number.cmake  install.sh  run.sh  tests_run.sh  version.h.in
.github/workflows/: main.yml
lib/mylib/: CMakeLists.txt
lib/mylib/include/: mylib.h
lib/mylib/src/: mylib.cpp
src/: main.cpp
test/: boost_test_build.cpp  boost_test_version.cpp  google_test_build.cpp  google_test_version.cpp
